Replace OnlyOffice branding with UnivaultOffice

--- a/apps/spreadsheeteditor/main/resources/help/pt/Functions/forecast-ets-confint.htm
+++ b/apps/spreadsheeteditor/main/resources/help/pt/Functions/forecast-ets-confint.htm
@@ -65,31 +65,31 @@
                 </tr>
                 <tr>
                     <td>1 ou omitido</td>
-                    <td><a href="../Only Office/average.htm" onclick="onhyperlinkclick(this)">MÉDIA</a></td>
+                    <td><a href="../Univault Office/average.htm" onclick="onhyperlinkclick(this)">MÉDIA</a></td>
                 </tr>
                 <tr>
                     <td>2</td>
-                    <td><a href="../Only Office/count.html" onclick="onhyperlinkclick(this)">CONTAR</a></td>
+                    <td><a href="../Univault Office/count.html" onclick="onhyperlinkclick(this)">CONTAR</a></td>
                 </tr>
                 <tr>
                     <td>3</td>
-                    <td><a href="../Only Office/counta.html" onclick="onhyperlinkclick(this)">CONTAR.VAL</a></td>
+                    <td><a href="../Univault Office/counta.html" onclick="onhyperlinkclick(this)">CONTAR.VAL</a></td>
                 </tr>
                 <tr>
                     <td>4</td>
-                    <td><a href="../Only Office/max.html" onclick="onhyperlinkclick(this)">MÁXIMO</a></td>
+                    <td><a href="../Univault Office/max.html" onclick="onhyperlinkclick(this)">MÁXIMO</a></td>
                 </tr>
                 <tr>
                     <td>5</td>
-                    <td><a href="../Only Office/median.html" onclick="onhyperlinkclick(this)">MEDIANA</a></td>
+                    <td><a href="../Univault Office/median.html" onclick="onhyperlinkclick(this)">MEDIANA</a></td>
                 </tr>
                 <tr>
                     <td>6</td>
-                    <td><a href="../Only Office/min.html" onclick="onhyperlinkclick(this)">MÍNIMO</a></td>
+                    <td><a href="../Univault Office/min.html" onclick="onhyperlinkclick(this)">MÍNIMO</a></td>
                 </tr>
                 <tr>
                     <td>7</td>
-                    <td><a href="../Only Office/sum.html" onclick="onhyperlinkclick(this)">SOMA</a></td>
+                    <td><a href="../Univault Office/sum.html" onclick="onhyperlinkclick(this)">SOMA</a></td>
                 </tr>
             </table> 
 			<p>Para aplicar a função <b>PREVISÃO.ETS.CONFINT</b>,</p>
