--- a/apps/spreadsheeteditor/main/resources/help/pt/Functions/forecast-ets-seasonaly.htm
+++ b/apps/spreadsheeteditor/main/resources/help/pt/Functions/forecast-ets-seasonaly.htm
@@ -48,27 +48,27 @@
                 </tr>
                 <tr>
                     <td>2</td>
-                    <td><a href="../Only Office/contar.html" onclick="onhyperlinkclick(this)">CONTAR</a></td>
+                    <td><a href="../Univault Office/contar.html" onclick="onhyperlinkclick(this)">CONTAR</a></td>
                 </tr>
                 <tr>
                     <td>3</td>
-                    <td><a href="../Only Office/contar-val.html" onclick="onhyperlinkclick(this)">CONTAR.VAL</a></td>
+                    <td><a href="../Univault Office/contar-val.html" onclick="onhyperlinkclick(this)">CONTAR.VAL</a></td>
                 </tr>
                 <tr>
                     <td>4</td>
-                    <td><a href="../Only Office/maximo.html" onclick="onhyperlinkclick(this)">MÁXIMO</a></td>
+                    <td><a href="../Univault Office/maximo.html" onclick="onhyperlinkclick(this)">MÁXIMO</a></td>
                 </tr>
                 <tr>
                     <td>5</td>
-                    <td><a href="../Only Office/med.html" onclick="onhyperlinkclick(this)">MEDIANA</a></td>
+                    <td><a href="../Univault Office/med.html" onclick="onhyperlinkclick(this)">MEDIANA</a></td>
                 </tr>
                 <tr>
                     <td>6</td>
-                    <td><a href="../Only Office/minimo.htm" onclick="onhyperlinkclick(this)">MÍNIMO</a></td>
+                    <td><a href="../Univault Office/minimo.htm" onclick="onhyperlinkclick(this)">MÍNIMO</a></td>
                 </tr>
                 <tr>
                     <td>7</td>
-                    <td><a href="../Only Office/soma.htm" onclick="onhyperlinkclick(this)">SOMA</a></td>
+                    <td><a href="../Univault Office/soma.htm" onclick="onhyperlinkclick(this)">SOMA</a></td>
                 </tr>
             </table> 
 			<p>Para aplicar a função <b>PREVISÃO.ETS.SAZONALIDADE</b>,</p>
