--- a/apps/spreadsheeteditor/main/resources/help/pt/Functions/forecast-ets.htm
+++ b/apps/spreadsheeteditor/main/resources/help/pt/Functions/forecast-ets.htm
@@ -68,7 +68,7 @@
                 </tr>
                 <tr>
                     <td>2</td>
-                    <td><a href="../Only Office/contar.html" onclick="onhyperlinkclick(this)">CONTAR</a></td>
+                    <td><a href="../Univault Office/contar.html" onclick="onhyperlinkclick(this)">CONTAR</a></td>
                 </tr>
                 <tr>
                     <td>3</td>
